2005-01-27  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : fix the value creation in the ctor.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : add a private debugging DllImport for ref_counts
	since the glue is there already.  g_value_get_object returns an
	unowned ref, so don't pretend like we own it. Make get_Val work for
	GObject subclasses. [Fixes #71125]

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeView.cs : always use CreateNativeObject.

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide 3 IM related internal types. [Fixes #71021]

2005-01-26  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs : refactoring of Parameters class. Added IEnumerable
	to Parameters and gracefully handle elem == null instead of special
	casing parms == null all over the place. Parameter logic is now Count
	driven. [Fixes #71750]

2005-01-26  Dan Winship  <danw@novell.com>

	* generator/Property.cs (Generate): Remove a redundant WriteLine (that
	resulted in there being 2 blank lines before every property).

	* generator/Signal.cs (Generate): s/Write/WriteLine/ to fix a
	weirdly-formatted if statement in the generated code.

2005-01-25  John Luke  <john.luke@gmail.com>

	* sample/CustomNotebook.cs:
	* sample/CustomWidget.cs: use Widget.WidgetFlags prop to avoid
	obsolete warning

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gnome/About.custom : implement a subclassable ctor.
	* gnome/Gnome.metadata : hide About ctor, fix About.Construct parms.
	* gnome/Makefile.am : add the new custom.
	[Fixes #71271]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : hide all the Pixbuf.SaveTo methods.
	* gdk/Pixbuf.custom : implement the SaveTo methods.
	[Fixes #71430]

2005-01-25  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide all the SignalFunc using Toolbar methods.
	* gtk/Makefile.am : add the new custom.
	* gtk/Toolbar.custom : implement the SignalFunc methods. Deal with