@@ -527,5 +527,18 @@ class TreeSelectionSample
         <remarks />
       </Docs>
     </Member>
+    <Member MemberName="GetSelectedRows">
+      <MemberSignature Language="C#" Value="public Gtk.TreePath[] GetSelectedRows ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.TreePath[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Returns an array of <see cref="T:Gtk.TreePath" />s representing the selected rows.</summary>
+        <returns>Selected rows in an array of <see cref="T:Gtk.TreePath" />s</returns>
+        <remarks />
+      </Docs>
+    </Member>
   </Members>
 </Type>
