@@ -1,5 +1,11 @@
 2005-01-27  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/NodeSelection.cs : use new GetSelectedRows() overload.
+	* gtk/TreeSelection.custom : add a GetSelectedRows overload without the
+	out model param. [Fixes #71814]
+
+2005-01-27  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/NodeView.cs : fix the value creation in the ctor.
 
 2005-01-26  Mike Kestner  <mkestner@novell.com>
